--- a/cdhl/package.json
+++ b/cdhl/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.1.3",
     "cytoscape": "^3.20.0",
     "cytoscape-dagre": "^2.3.2",
     "firebase": "^9.5.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-cytoscapejs": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
