--- a/cdhl/package.json
+++ b/cdhl/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.0.3",
     "react-cytoscapejs": "^1.2.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
