--- a/cdhl/package.json
+++ b/cdhl/package.json
@@ -42,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.24.0",
+    "react-axios": "^2.0.5"
   }
 }
