--- a/cdhl/package.json
+++ b/cdhl/package.json
@@ -2,6 +2,7 @@
   "name": "cdhl",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -9,7 +10,7 @@
     "bootstrap": "^5.1.3",
     "cytoscape": "^3.20.0",
     "cytoscape-dagre": "^2.3.2",
-    "firebase": "^9.5.0",
+    "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-cytoscapejs": "^1.2.1",
